--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">MyFirstApp</string>
     <string name="skip">Skip</string>
     <string name="next">Next</string>
+    <string name="welcome">Welcome to Youtube</string>
+    <string name="awesomenes">new awesomeness awaits</string>
 </resources>
